# WorkspaceAutomation

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  requirements_dev.txt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: ask-a-question.md
.github/workflows/: issues.py  issues.yml
WorkspaceAutomation/: __errors__.py  __init__.py  __main__.py  __vars__.py  app.py  common.py  set_up.py
WorkspaceAutomation/Config/: __init__.py  functions.py
WorkspaceAutomation/WorkspaceManager/: __init__.py  functions.py  shared_menus.py
WorkspaceAutomation/WorkspaceManager/builders/: Contents.py  __init__.py  github.py
WorkspaceAutomation/WorkspaceManager/runners/: __init__.py  apps.py  webs.py
WorkspaceAutomation/builders/: Contents.py  __init__.py  __init___.py  github.py
WorkspaceAutomation/resources/: languages.json
WorkspaceAutomation/runners/: __init__.py  apps.py  webs.py
docs/: requirements.txt
docs/source/: conf.py  index.md
docs/source/Features/: GitHub.md  Runners.md  WorkSpaces.md
docs/source/GettingStarted/: installation.md  setup.md
docs/source/RepositoryInfo/: Changelog.md  History.md
docs/source/Usage/: advanced.md  basic.md
